[package]
name = "memory"
version = "1.0.0"
authors = ["Montegasppα Cacilhας <montegasppa@cacilhas.info>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
rand = "0.8"
slint = "1.0"

[build-dependencies]
slint-build = "1.0"
