[package]
name = "memory"
version = "1.0.0"
authors = ["Montegasppα Cacilhας <montegasppa@cacilhas.cc>"]
edition = "2021"
build = "build.rs"

[profile.release]
opt-level     = "s"
codegen-units = 1
panic = "abort"
debug = false
lto   = true
rpath = false
strip = true

[dependencies]
eyre = "0.6"
rand = "0.8"
slint = "1.5"

[build-dependencies]
slint-build = "1.5"
